# JChip8

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
JChip8/: CMakeLists.txt
JChip8/include/: emulator_config.h  imgui_handler.h  jchip8.h  sdl2_handler.h  typedefs.h
JChip8/src/: emulator_config.cpp  imgui_handler.cpp  jchip8.cpp  main.cpp  sdl2_handler.cpp
JChip8Asm/: CMakeLists.txt
JChip8Asm/include/: j_assembler.h
JChip8Asm/src/: j_assembler.cpp
